--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -22,6 +22,9 @@ ACCUEIL
         {% if app.user and is_granted('ROLE_ADMIN') %}
         <a href="{{path('admin')}}" class="btn btn-primary mt-3">Espace d'administration</a>
         {% endif %}
+        {% if app.user.commandes %}
+        <a href="{{path('app_valider_commandes')}}" class="btn btn-success mt-3">Vos commandes</a>
+        {% endif %}
     </div>
     <h2 class="text-info">Nos produits</h2>
     <div class="row mt-3">
