--- a/templates/produits/details-produit.html.twig
+++ b/templates/produits/details-produit.html.twig
@@ -16,32 +16,58 @@ Détails produits
         true, startDelay: 20, backSpeed: 10, backDelay: 20, loop: true, showCursor: false }) }}></h2>
     -->
 </div>
-<div>
+<div class="container bg-white shadow p-3 mt-3 rounded text-warning">
+    <div class="row">
 
-    <div class="container bg-white shadow p-3 mt-3 rounded text-warning">
-        <div class="">
+        <div class="d-flex justify-content-between">
             {% for photos in produit.photos %}
-            <div class="text-center">
-                <img src="{{asset('build/images/' ~ photos)}}" class="img-fluid" width="25%" alt="...">
-            </div>
+            <img src="{{asset('build/images/' ~ photos)}}" class="" width="25%" alt="...">
             {% endfor %}
-            <div class="card-body">
-                <h2 class="card-title">{{produit.name}}</h2>
-                <p class="card-text">{{produit.description|raw}}</p>
-                <p>Catégorie : {{produit.categorie}}</p>
-                <p>Date de dépot : {{produit.createdAt|date('d/m/Y')}}</p>
-                <h3>Distributeurs : </h3>
-                {% for distributeurs in produit.distributeur %}
-                <ul class="list-group">
-                    <li class="list-group-item text-danger mt-3">{{distributeurs.name}}</li>
-                </ul>
-                {% endfor %}
+        </div>
 
+        <div class="card-body p-3">
+            <h2 class="card-title">{{produit.name}}</h2>
+            <p class="card-text">{{produit.description}}</p>
+            {#composer require twig/intl-extra#}
+            <p class="card-text">PRIX : {{produit.price}} €</p>
+            <p>Catégorie : {{produit.categorie}}</p>
+            <p>Date de dépot : {{produit.createdAt|date('d/m/Y')}}</p>
+            <h3>Distributeurs : </h3>
+            {% for distributeurs in produit.distributeur %}
+            <ul class="list-group">
+                <li class="list-group-item text-danger mt-3">{{distributeurs.name}}</li>
+            </ul>
+            {% endfor %}
+
+            {% if app.user %}
                 <a href="{{path('app_panier',{id: produit.id})}}" class="btn btn-success mt-3">Ajouter au panier</a>
+            {% endif %}
 
-                <a href="{{path('app_produits')}}" class="btn btn-primary mt-3">Retour</a>
-            </div>
+            <a href="{{path('app_produits')}}" class="btn btn-primary mt-3">Retour</a>
+        </div>
+
+
+
+        <h2 class="text-warning">Commentaires</h2>
+
+        {{ form_start(form, {'attr' : { 'class': 'comments' },'action': path('app_details_produit', {'id': produit.id}), 'method': 'POST'}) }}
+            {{ form_row(form.name) }}
+            {{ form_row(form.content) }}
+            {{ form_row(form._token) }}
+            <button class="btn btn-success" type="submit">Ajouter le commentaire</button>
+        {{ form_end(form) }}
+
+
+         <div id="comment-parent" class="shadow rounded mt-3 p-3 text-warning list-group">
+        {% for commentaire in produit.commentaire %}
+       
+            <h3 class="text-warning">Pseudo : {{commentaire.name}}</h3>
+            <p>Message : {{commentaire.content}}</p>
+     
+        {% endfor %}
         </div>
     </div>
 </div>
+
+<script src="{{asset('js/commentaires.js')}}" type="application/javascript"></script>
 {% endblock %}
